<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="DETAIL_FRAGMENT_TAG">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorCard"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name_FD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/activity_0.5step_margin"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/title_text_size"
                        android:textStyle="bold"
                        tools:text="First National Bank" />


                    <LinearLayout style="@style/LinerLayoutFD">

                        <TextView
                            style="@style/TextTitleFD"
                            android:text="@string/address" />

                        <TextView
                            android:id="@+id/tv_address_FD"
                            style="@style/TextFieldFD"
                            tools:text="Deadwood" />
                    </LinearLayout>


                    <LinearLayout style="@style/LinerLayoutFD">

                        <TextView
                            style="@style/TextTitleFD"
                            android:text="@string/phone" />

                        <TextView
                            android:id="@+id/tv_phone_FD"
                            style="@style/TextFieldFD"
                            tools:text="ask for Seth Bullock" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextFieldFD"
                            android:layout_width="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/currency_name" />

                        <TextView
                            android:id="@+id/tv_update_FD"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_gravity="center"

                            android:text="@string/currency_name"
                            android:textSize="@dimen/small_text"
                            android:textStyle="italic" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.8"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextTitleFD"
                            android:layout_gravity="right"
                            android:paddingRight="@dimen/activity_2step_margin"
                            android:text="@string/ask" />

                        <TextView
                            style="@style/TextTitleFD"
                            android:layout_gravity="right"
                            android:paddingRight="@dimen/activity_2step_margin"
                            android:text="@string/bid" />

                    </LinearLayout>

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/courses_cv_FD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="@dimen/cardview_default_elevation"
                card_view:cardUseCompatPadding="true">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_currencies_FD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu_float"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        fab:menu_backgroundColor="#ccffffff"
        fab:menu_colorNormal="@color/colorAccent"
        fab:menu_icon="@drawable/ic_view"
        fab:menu_labels_colorNormal="@color/colorCard"
        fab:menu_labels_colorPressed="@color/colorActionBar"
        fab:menu_labels_colorRipple="@color/colorActionBarText"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_labels_textColor="@color/colorFirstText">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_link_FD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_link_menu"
            app:fab_colorNormal="@color/colorActionBarText"
            fab:fab_label="@string/url"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_map_FD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_map_menu"
            app:fab_colorNormal="@color/colorActionBarText"
            fab:fab_label="@string/map"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_phone_FD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone_menu"
            app:fab_colorNormal="@color/colorActionBarText"
            fab:fab_label="@string/call"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
